[package]
name = "basc"
version = "0.1.0"
authors = ["brian-ca <no-email@given.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34"
yahoo_finance_api = {version = "1.2.2", features = ["blocking"]}
chrono = "0.4"